testsuite/tests/saks/should_fail/T16826.stderr

T16826.hs:14:1: error:
    • Kind signature on a class must end with Constraint
      unobscured by type families
    • In the class declaration for ‘C’
